--- a/test.html
+++ b/test.html
@@ -71,8 +71,7 @@ require([], function() {
  <div id="sprouts">
     <div class="award a1 show"></div><div class="award a2"></div><div
          class="award a3"></div><div class="award a4"></div><div
-         class="award a5"></div><div class="award a6"></div><div
-         class="award a7"></div><div class="award a8"></div>
+         class="award a5"></div><div class="award a6"></div>
  </div>
  <div id="ruler">
    <div class="background"><div class="foreground" style="height:33%"></div></div>
@@ -109,8 +108,7 @@ require([], function() {
    <div class="strip">
     <div class="award a1 show"></div><div class="award a2 show"></div><div
          class="award a3"></div><div class="award a4"></div><div
-         class="award a5"></div><div class="award a6"></div><div
-         class="award a7"></div><div class="award a8"></div>
+         class="award a5"></div><div class="award a6"></div>
    </div>
  </div>
 </div></div>
@@ -186,7 +184,7 @@ require([], function() {
 </div></div>
 
 <div id="mask"></div>
-<div id="video"></div>
+<div id="video"><div class="inner"></div></div>
 <div id="rotate">
  <div class="background"></div>
  <div class="foreground"></div>
