--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -72,8 +72,12 @@ window.addEventListener('load', function(e) {
 <script src="require.js" data-main="index.js" type="text/javascript"></script>
 </head>
 <body>
-<div id="game"><div id="level" class="level">
+<div id="gamelevel" class="level">
+<div id="game"><div id="level">
  <div id="background">
+  <div class="ground">
+   <div class="mountain"></div>
+  </div>
   <div class="troposphere">
    <div class="cloud c2"></div>
   </div>
@@ -160,9 +164,11 @@ window.addEventListener('load', function(e) {
  </div>
 </div></div>
 <div id="buttons"></div>
+</div><!-- gamelevel -->
 
 <div id="menu"><div class="level">
  <div class="background">
+   <div class="mountains"></div>
    <div class="mesosphere">
      <div class="stars"></div>
    </div>
@@ -227,7 +233,8 @@ window.addEventListener('load', function(e) {
 </div></div>
 
 <div id="mask"></div>
-<div id="video"><div class="inner"></div></div>
+<div id="video"><div class="inner">
+</div></div>
 <div id="rotate">
  <div class="background"></div>
  <div class="foreground"></div>
