--- a/assets/www/test.html
+++ b/assets/www/test.html
@@ -2,6 +2,11 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
+<meta name="apple-mobile-web-app-capable" content="yes" />
+<meta name="apple-mobile-web-app-status-bar-style" content="black" />
+<link rel="shortcut icon" href="images/icon-16.ico" />
+<link rel="apple-touch-icon" href="images/icon-128.png" />
 <title>CSS Keyframe Animation test</title>
 <link rel="stylesheet" href="style.css" />
 <script type="text/javascript" src="require.js"></script>
@@ -10,15 +15,16 @@ require([], function() {
 });
 </script>
 <style type="text/css">
-.test #level {
+.testx #level {
   height: 4520px; width: 800px;
   -webkit-transform-origin: bottom left;
   -webkit-transform: scale(0.13);
 }
+.test #gamelevel,
 .test #menu {
   height: 1280px; width: 800px;
   -webkit-transform-origin: top left;
-  -webkit-transform: scale(0.6);
+  -webkit-transform: scale(0.4);
 }
 
 #b0 { -webkit-transform: translate3d(100px,-100px,0); }
@@ -26,8 +32,12 @@ require([], function() {
 </head>
 
 <body class="anim n9 menu">
-<div id="game"><div id="level" class="level grass troposphere">
+<div id="gamelevel" class="level mountains ground">
+<div id="game"><div id="level">
  <div id="background">
+  <div class="ground">
+   <div class="mountain"></div>
+  </div>
   <div class="troposphere">
    <div class="cloud c2"></div>
   </div>
@@ -113,11 +123,13 @@ require([], function() {
  </div>
 </div></div>
 <div id="buttons">
-<a class="yellow"></a><a class="lilac"></a><a class="black"></a><a class="orange"></a>
+<a class="yellow"><span></span></a><a class="lilac"><span></span></a><a class="black"><span></span></a><a class="orange"><span></span></a>
 </div>
+</div><!-- gamelevel -->
 
-<div id="menu"><div class="level grass exposed-troposphere">
+<div id="menu"><div class="level mountains exposed-troposphere">
  <div class="background">
+   <div class="mountains"></div>
    <div class="mesosphere">
      <div class="stars"></div>
    </div>
@@ -153,25 +165,25 @@ require([], function() {
    <div class="stars three">
 <span class="star"></span><span class="star"></span><span class="star"></span>
    </div>
-   <div class="tag"></div>
+   <a class="tag" href="#"></a>
   </div>
   <div class="troposphere">
    <div class="stars two">
 <span class="star"></span><span class="star"></span><span class="star"></span>
    </div>
-   <div class="tag"></div>
+   <a class="tag hover" href="#"></a>
   </div>
   <div class="stratosphere">
    <div class="stars one">
 <span class="star"></span><span class="star"></span><span class="star"></span>
    </div>
-   <div class="tag hover"></div>
+   <a class="tag" href="#"></a>
   </div>
   <div class="mesosphere">
    <div class="stars">
 <span class="star"></span><span class="star"></span><span class="star"></span>
    </div>
-   <div class="tag"></div>
+   <a class="tag" href="#"></a>
   </div>
  </div>
  <div class="clouds">
@@ -207,7 +219,7 @@ require([], function() {
   Would you like to install a shortcut to Nell's Balloons on your
   home screen?
   </p>
-  <button autofocus" class="yes">Yes</button>
+  <button autofocus class="yes">Yes</button>
   <button class="no">No</button>
 </div>
 
