--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -23,6 +23,9 @@
 <link rel="stylesheet" href="appcacheui.css" />
 <link rel="stylesheet" href="style.css" />
 <script type="text/javascript" charset="utf-8" src="cordova-1.7.0.js"></script>
+<script>/* configure require.js */
+var require = { waitSeconds: 30 };
+</script>
 <script src="require.js" data-main="index.js" type="text/javascript"></script>
 </head>
 <body class='appcache-allinfo'>
